unpackaged/main/default/objects/Pricebook2/fields/Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Beneficio__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>%Beneficio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>