unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio__c</fullName>
    <formula>IF(Porcentaje_Precio_sobre_avenida__c &gt; 0,  
   Porcentaje_Precio_sobre_avenida__c  * Precio_Lista__c,
   Precio_sobre_avenida__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Sobre Avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>