unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Esquina__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Esquina__c</fullName>
    <formula>IF(Porcentaje_Precio_esquina__c &gt; 0, 
   Porcentaje_Precio_esquina__c * Precio_Lista__c,
   Precio_esquina__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Esquina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>