unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Frente_a_Parque__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Frente_a_Parque__c</fullName>
    <formula>IF(Precio_frente_a_parque__c &gt; 0, /*Porcentaje*/
			Precio_frente_a_parque__c * Precio_Lista__c, /*Porcentaje * Precio*/
   Precio_frente_a_praque__c
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Frente a Parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>