unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Frente_Area_Municipal__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Frente_Area_Municipal__c</fullName>
    <formula>IF(Prcentaje_Precio_frente_area_municipal__c &gt; 0,   
   Prcentaje_Precio_frente_area_municipal__c * Precio_Lista__c,
   Precio_frente_area_municipal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Frente Area Municipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>