unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Lado_Sol__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Lado_Sol__c</fullName>
    <formula>IF(Procentaje_Precio_lado_sol__c &gt; 0,
			Procentaje_Precio_lado_sol__c * Precio_Lista__c,
   Precio_lado_sol__c
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Lado Sol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>