unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Lado_Sombra__c</fullName>
    <formula>IF(Porcentaje_Precio_lado_sombra__c &gt; 0, 
   Porcentaje_Precio_lado_sombra__c * Precio_Lista__c,
   Precio_lado_sombra__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Lado Sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>