unpackaged/main/default/objects/Pricebook2/fields/CALC_Precio_Superficie_Excedente__c.field-meta.xml
<CustomField>
    <fullName>CALC_Precio_Superficie_Excedente__c</fullName>
    <formula>Precio_superficie_excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CALC Precio Superficie Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>