unpackaged/main/default/objects/Pricebook2/fields/Clase_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Bonificacion__c</fullName>
    <label>Clase de Bonificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monto</fullName>
            </value>
            <value>
                <fullName>Porcentaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>