unpackaged/main/default/objects/Pricebook2/fields/Clase_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Financiamiento__c</fullName>
    <label>Clase de Financiamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Importe</fullName>
            </value>
            <value>
                <fullName>Porcentaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>