unpackaged/main/default/objects/Pricebook2/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formalizado</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
            <value>
                <fullName>En Progreso</fullName>
                <default>true</default>
                <label>En Progreso</label>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Duplicada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>