unpackaged/main/default/objects/Pricebook2/fields/Estatus_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta__c</fullName>
    <label>Estatus Proceso de Venta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formalizado</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>