unpackaged/main/default/objects/Pricebook2/fields/Estatus_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Promocion__c</fullName>
    <label>Estatus Promoción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>