unpackaged/main/default/objects/Pricebook2/fields/Fecha_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aprobacion__c</fullName>
    <label>Fecha de Aprobación</label>
    <type>Date</type>
</CustomField>