unpackaged/main/default/objects/Pricebook2/fields/Fraccinamiento_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fraccinamiento_Vigencia__c</fullName>
    <label>Fraccinamiento-Vigencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>