unpackaged/main/default/objects/Pricebook2/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Fraccionamiento__c.Activo_frac__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Listas de precios</relationshipLabel>
    <relationshipName>Listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>