unpackaged/main/default/objects/Pricebook2/fields/Ilimitado__c.field-meta.xml
<CustomField>
    <fullName>Ilimitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ilimitado</label>
    <type>Checkbox</type>
</CustomField>