unpackaged/main/default/objects/Pricebook2/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>%IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>