unpackaged/main/default/objects/Pricebook2/fields/Lista_de_Precios_Origen__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios Origen</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>