unpackaged/main/default/objects/Pricebook2/fields/Lista_Duplicada__c.field-meta.xml
<CustomField>
    <fullName>Lista_Duplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lista Duplicada?</label>
    <type>Checkbox</type>
</CustomField>