unpackaged/main/default/objects/Pricebook2/fields/Monto_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Monto_Bonificacion__c</fullName>
    <label>Monto Bonificación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>