unpackaged/main/default/objects/Pricebook2/fields/No_Modificable__c.field-meta.xml
<CustomField>
    <fullName>No_Modificable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Modificable</label>
    <type>Checkbox</type>
</CustomField>