unpackaged/main/default/objects/Pricebook2/fields/Nombre_Lista_Validacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Lista_Validacion__c</fullName>
    <label>Nombre Lista Validación</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>