unpackaged/main/default/objects/Pricebook2/fields/Nombre_Trunc__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Trunc__c</fullName>
    <formula>LEFT( Name , 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Trunc</label>
    <type>Text</type>
</CustomField>