unpackaged/main/default/objects/Pricebook2/fields/Periodo_de_Fin__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Fin__c</fullName>
    <formula>CASE(MONTH(Vigente_Hasta__c),  
							 1, &quot;ENERO&quot;,
							 2, &quot;FEBRERO&quot;,
							 3, &quot;MARZO&quot;,
							 4, &quot;ABRIL&quot;,
							 5, &quot;MAYO&quot;,
							 6, &quot;JUNIO&quot;,
							 7, &quot;JULIO&quot;,
							 8, &quot;AGOSTO&quot;,
							 9, &quot;SEPTIEMBRE&quot;,
							10, &quot;OCTUBRE&quot;,
							11, &quot;NOVIEMBRE&quot;,
							12, &quot;DICIEMBRE&quot;, &quot;&quot;) &amp;
							&quot; &quot; &amp;
							TEXT( YEAR(Vigente_Hasta__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo de Fin</label>
    <type>Text</type>
</CustomField>