unpackaged/main/default/objects/Pricebook2/fields/Periodo_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Inicio__c</fullName>
    <label>Periodo Inicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2023-05-01</fullName>
                <label>MAYO 2023</label>
            </value>
            <value>
                <fullName>2023-06-01</fullName>
                <label>JUNIO 2023</label>
            </value>
            <value>
                <fullName>2023-07-01</fullName>
                <label>JULIO 2023</label>
            </value>
            <value>
                <fullName>2023-08-01</fullName>
                <label>AGOSTO 2023</label>
            </value>
            <value>
                <fullName>2023-09-01</fullName>
                <label>SEPTIEMBRE 2023</label>
            </value>
            <value>
                <fullName>2023-10-01</fullName>
                <label>OCTUBRE 2023</label>
            </value>
            <value>
                <fullName>2023-11-01</fullName>
                <label>NOVIEMBRE 2023</label>
            </value>
            <value>
                <fullName>2023-12-01</fullName>
                <label>DICIEMBRE 2023</label>
            </value>
            <value>
                <fullName>ENERO 2024</fullName>
            </value>
            <value>
                <fullName>FEBRERO 2024</fullName>
            </value>
            <value>
                <fullName>MARZO 2024</fullName>
            </value>
            <value>
                <fullName>ABRIL 2024</fullName>
            </value>
            <value>
                <fullName>MAYO 2024</fullName>
            </value>
            <value>
                <fullName>JUNIO 2024</fullName>
            </value>
            <value>
                <fullName>JULIO 2024</fullName>
            </value>
            <value>
                <fullName>AGOSTO 2024</fullName>
            </value>
            <value>
                <fullName>SEPTIEMBRE 2024</fullName>
            </value>
            <value>
                <fullName>OCTUBRE 2024</fullName>
            </value>
            <value>
                <fullName>NOVIEMBRE 2024</fullName>
            </value>
            <value>
                <fullName>DICIEMBRE 2024</fullName>
            </value>
            <value>
                <fullName>ENERO 2025</fullName>
            </value>
            <value>
                <fullName>FEBRERO 2025</fullName>
            </value>
            <value>
                <fullName>MARZO 2025</fullName>
            </value>
            <value>
                <fullName>ABRIL 2025</fullName>
            </value>
            <value>
                <fullName>MAYO 2025</fullName>
            </value>
            <value>
                <fullName>JUNIO 2025</fullName>
            </value>
            <value>
                <fullName>JULIO 2025</fullName>
            </value>
            <value>
                <fullName>AGOSTO 2025</fullName>
            </value>
            <value>
                <fullName>SEPTIEMBRE 2025</fullName>
            </value>
            <value>
                <fullName>OCTUBRE 2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>