unpackaged/main/default/objects/Pricebook2/fields/Plazos__c.field-meta.xml
<CustomField>
    <fullName>Plazos__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 Mes</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Meses</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Meses</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 Meses</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5  Meses</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 Meses</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 Meses</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 Meses</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 Meses</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 Meses</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 Meses</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12  Meses</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 Meses</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 Meses</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Meses</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 Meses</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 Meses</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 Meses</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19 Meses</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 Meses</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 Meses</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22 Meses</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23 Meses</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 Meses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>