unpackaged/main/default/objects/Pricebook2/fields/Porcentaje_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Bonificacion__c</fullName>
    <label>Porcentaje Bonificación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>