unpackaged/main/default/objects/Pricebook2/fields/Porcentaje_Fianciamiento__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Fianciamiento__c</fullName>
    <label>Porcentaje Financiamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>