unpackaged/main/default/objects/Pricebook2/fields/Porcentaje_Precio_lado_sombra__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Precio_lado_sombra__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>%Precio lado sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>