unpackaged/main/default/objects/Pricebook2/fields/Prcentaje_Precio_frente_area_municipal__c.field-meta.xml
<CustomField>
    <fullName>Prcentaje_Precio_frente_area_municipal__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>%Precio frente área municipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>