unpackaged/main/default/objects/Pricebook2/fields/Precio_Comercial_sin_Mts2__c.field-meta.xml
<CustomField>
    <fullName>Precio_Comercial_sin_Mts2__c</fullName>
    <formula>Precio_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Comercial sin Mts2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>