unpackaged/main/default/objects/Pricebook2/fields/Precio_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Compra__c</fullName>
    <label>Precio de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>