unpackaged/main/default/objects/Pricebook2/fields/Precio_esquina__c.field-meta.xml
<CustomField>
    <fullName>Precio_esquina__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio esquina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>