unpackaged/main/default/objects/Pricebook2/fields/Precio_frente_a_praque__c.field-meta.xml
<CustomField>
    <fullName>Precio_frente_a_praque__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio frente a parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>