unpackaged/main/default/objects/Pricebook2/fields/Precio_lado_sombra__c.field-meta.xml
<CustomField>
    <fullName>Precio_lado_sombra__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio lado sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>