unpackaged/main/default/objects/Pricebook2/fields/Precio_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Precio Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>