unpackaged/main/default/objects/Pricebook2/fields/Precio_Min_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Min_Autorizado__c</fullName>
    <label>Precio Min Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>