unpackaged/main/default/objects/Pricebook2/fields/Precio_Min_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Min_Solicitado__c</fullName>
    <label>Precio Min Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>