unpackaged/main/default/objects/Pricebook2/fields/Precio_Minimo_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_Autorizado__c</fullName>
    <formula>IF( Monto_Bonificacion__c &gt; 0, Precio_Lista__c - Monto_Bonificacion__c, 
			IF(Porcentaje_Bonificacion__c &gt; 0, Precio_Lista__c  + (Precio_Lista__c * Monto_Bonificacion__c), 0
					)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>