unpackaged/main/default/objects/Pricebook2/fields/Precio_Presupuesto_F__c.field-meta.xml
<CustomField>
    <fullName>Precio_Presupuesto_F__c</fullName>
    <formula>Prototipo__r.Precio_Presupuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>