unpackaged/main/default/objects/Pricebook2/fields/Precio_sobre_avenida__c.field-meta.xml
<CustomField>
    <fullName>Precio_sobre_avenida__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio sobre avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>