unpackaged/main/default/objects/Pricebook2/fields/Precio_superficie_excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_superficie_excedente__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Precio superficie excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>