unpackaged/main/default/objects/Pricebook2/fields/Precio_Total_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Excedente__c</fullName>
    <formula>Precio_superficie_excedente__c *  Superficie_excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>