unpackaged/main/default/objects/Pricebook2/fields/Precio_Total_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Vivienda__c</fullName>
    <formula>Precio_Lista__c + Precio_esquina__c + Precio_Instalaciones__c + Precio_frente_a_praque__c + Precio_frente_area_municipal__c + Precio_lado_sol__c + Precio_lado_sombra__c + Precio_sobre_avenida__c + Precio_Total_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total Vivienda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>