unpackaged/main/default/objects/Pricebook2/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>